Дописал тесты на сервисы, написал на AuthController. Добавил пагинацию для AdvertisementService Добавил нормальные exceptions И МИГРАЦИИ УРА
Signed-off-by: pdolinin <paveldolinin03@gmail.com>